# budgie-trash-applet

./: .clang-format  .gitignore  CHANGELOG.md  README.md  budgie-trash-applet.drawio  meson.build
data/: TrashApplet.plugin  com.github.EbonJaeger.budgie-trash-applet.gresource.xml  com.github.ebonjaeger.budgie-trash-applet.metainfo.xml  com.solus-project.budgie-desktop.budgie-trash-applet.gschema.xml  meson.build
data/images/: screenshot1.png~
data/style/: style.css
data/ui/: confirm_revealer.glade  popover_stack.glade~  trash_item.glade  trash_item.glade~
src/: TrashApplet.plugin.in  TrashApplet.vala  TrashHandler.vala  TrashIconButton.vala  TrashItem.vala  TrashPopover.vala  TrashStore.vala  applet.c  applet.h  budgie-trash-applet.gresource.xml  meson.build  notify.c  notify.h  plugin.c  plugin.h  settings.ui  trash_button_bar.c  trash_button_bar.h  trash_confirm_dialog.c  trash_confirm_dialog.h  trash_enum_types.c  trash_enum_types.h  trash_handler.h  trash_icon_button.c  trash_icon_button.h  trash_info.c  trash_info.h  trash_item.c  trash_item.h  trash_item_row.c  trash_item_row.h  trash_manager.c  trash_manager.h  trash_popover.c  trash_popover.h  trash_revealer.c  trash_revealer.h  trash_settings.c  trash_settings.h  trash_store.c  (+3 more)
src/Widgets/: IconButton.vala  IndicatorIcon.vala  MainPopover.vala  SettingsView.vala  TrashItem.vala  TrashStoreWidget.vala
src/ui/: trash_icon_button.c  trash_icon_button.h  trash_item.c  trash_item.h  trash_item_ui.c  trash_item_ui.h  trash_revealer.c  trash_revealer.h  trash_store.c  trash_store.h
style/: _file-box.scss  _item.scss  _settings.scss  _store.scss  _vars.scss  main.scss  meson.build
